[metadata]
name = mpcorb2oorb
version = file: mpcorb2oorb/version.py
author = Siegfried Eggl
author-email = eggl@uw.edu
home-page = https://github.com/eggls6/mpcorb2oorb
description = Convert MPCORB orbit files to OORB input files
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license-file = LICENSE.md
keywords = astronomy, astrophysics, space, science, asteroids, comets, solar system
classifiers =
    Development Status :: 0 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.4
packages = mpcorb2oorb
setup_requires =
    setuptools >= 42
    wheel
    setuptools_scm
    pytest_runner
tests_require = pytest

[options.package_data]
mpcorb2oorb = tests/*.txt

[aliases]
test=pytest
